--- a/package.json
+++ b/package.json
@@ -4,16 +4,33 @@
   "description": "functions for validation",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "prepublish": "tsc",
+  "prepublish": "npm run build",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "validate",
     "validation",
-    "varify",
-    "verification"
+    "verify",
+    "verification",
+    "string",
+    "form"
   ],
   "author": "vakharia_heet",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/heet-vakharia/validster.git"
+  },
+  "bugs": {
+    "url": "https://github.com/heet-vakharia/validster/issues"
+  },
+  "homepage": "https://github.com/heet-vakharia/validster#readme",
+  "devDependencies": {
+    "typescript": "^4.2.4"
+  }
 }
