--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verifierjs",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "functions for validation",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,9 +16,19 @@
     "validate",
     "validation",
     "verify",
+    "checker",
+    "realtime validation",
     "verification",
-    "string",
-    "form"
+    "string verification",
+    "typescript",
+    "form validation",
+    "verifier",
+    "rgb",
+    "rgb to hex",
+    "hex",
+    "hex to rgb",
+    "rgba",
+    "rgba to hex"
   ],
   "author": "vakharia_heet",
   "license": "MIT",
