--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "target": "ES2017",
     "module": "CommonJS",
 
-    "outDir": "../dist",
+    "outDir": "./dist",
     "declaration": true,
     "strict": true
   },
-  "include": ["*", "src/index.ts", "src/Color.ts"],
+  "include": ["*",],
   "exclude": ["node-modules", "dist"]
 }
