--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "types": "index.d.ts",
   "prepublish": "npm run build",
   "files": [
-    "./dist/index.js",
-    "./dist/index.d.ts"
+    "dist"
   ],
   "scripts": {
     "test": "jest",
