--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "verifierjs",
-  "version": "0.2.1",
+  "version": "0.2.0",
   "description": "functions for validation and color conversion",
   "main": "index.js",
   "types": "index.d.ts",
   "prepublish": "npm run build",
   "files": [
-    "dist"
+    "dist/**/*"
   ],
   "scripts": {
     "test": "jest",
