--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verifierjs",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "functions for validation and color conversion",
   "main": "index.js",
   "types": "index.d.ts",
@@ -36,9 +36,9 @@
   },
   "homepage": "https://github.com/vakhariaheet/verifier#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
-    "typescript": "^4.2.4",
-    "@types/jest": "^26.0.23"
+    "typescript": "^4.2.4"
   },
   "dependencies": {}
 }
