--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,3 +29,7 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+- name: Upload coverage to Codecov
+    uses: codecov/codecov-action@v1
+    with:
+        token: ${{ secrets.CODECOV_TOKEN }}
