--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "jest --config jest.config.ts",
     "build": "tsc --build tsconfig.json",
     "dev": "tsc --build tsconfig.json --watch"
   },
@@ -37,7 +37,9 @@
   "homepage": "https://github.com/vakhariaheet/verifier#readme",
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "codecov": "^3.8.2",
     "jest": "^26.6.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {}
