--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES2017",
     "module": "CommonJS",
 
     "outDir": "./dist",
     "declaration": true,
     "strict": true
   },
-  "include": ["*",],
+  "include": ["*"],
   "exclude": ["node-modules", "dist"]
 }
