--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      - name: Compiled to js
+        run: npm build
 
       - name: Run the tests
         run: npm test -- --coverage
