--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm build
 
       - name: Run the tests
-        run: npm test -- --coverage
+        run: npm test
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
