--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,11 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-      - name: Compiled to js
-        run: npm build
 
       - name: Run the tests
-        run: npm test
+        run: npm test -- --coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
