Added badges and removed files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "strict": true
   },
   "include": ["*"],
-  "exclude": ["node-modules", "dist"]
+  "exclude": ["node-modules", "dist", "jest.config.ts"]
 }
