--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "test": "jest --config jest.config.ts",
     "build": "tsc --build tsconfig.json",
-    "dev": "tsc --build tsconfig.json --watch"
+    "dev": "tsc --build tsconfig.json --watch",
+    "minify": "jsmin -o dist/index.min.js dist/index.js"
   },
   "keywords": [
     "validate",
@@ -39,6 +40,7 @@
     "@types/jest": "^26.0.23",
     "codecov": "^3.8.2",
     "jest": "^26.6.3",
+    "jsmin": "^1.0.1",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
   },
