--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "ts-node": "^10.0.0",
+    "tslib": "^2.3.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {}
