--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verifierjs",
-  "version": "0.4.11",
+  "version": "0.0.0-development",
   "description": "functions for validation",
   "main": "index.js",
   "types": "index.d.ts",
@@ -12,9 +12,18 @@
     "index.min.js"
   ],
   "scripts": {
-    "test": "jest --config jest.config.ts",
+    "commit": "git-cz",
+    "test": "jest --config jest.config.ts --coverage",
     "build": "tsc --build tsconfig.json && rollup -c",
-    "dev": "tsc --build tsconfig.json --watch"
+    "dev": "tsc --build tsconfig.json --watch",
+    "make-badges": "istanbul-badges-readme && istanbul-badges-readme --readmeDir=\"./.github\"\n",
+    "semantic-release": "semantic-release"
+  },
+  "config": {
+
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   },
   "keywords": [
     "validate",
@@ -32,7 +41,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vakhariaheet/verifier.git"
+    "url": "https://github.com/vakhariaheet/verifier.git"
   },
   "bugs": {
     "url": "https://github.com/vakhariaheet/verifier/issues"
@@ -42,11 +51,15 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.23",
     "codecov": "^3.8.2",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "istanbul-badges-readme": "^1.4.0",
     "jest": "^26.6.3",
     "rollup": "^2.52.0",
     "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "semantic-release": "^18.0.0",
     "ts-node": "^10.0.0",
     "tslib": "^2.3.0",
     "typescript": "^4.2.4"
