--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "homepage": "https://github.com/vakhariaheet/verifier#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.23",
     "codecov": "^3.8.2",
@@ -55,9 +57,7 @@
     "istanbul-badges-readme": "^1.4.0",
     "jest": "^26.6.3",
     "rollup": "^2.52.0",
-    "rollup-plugin-babel-minify": "^10.0.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^18.0.0",
     "ts-node": "^10.0.0",
     "tslib": "^2.3.0",
