--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 language: node_js
 cache:
+  yarn: true
   directories:
     - node_modules
 branches:
@@ -9,8 +10,8 @@ branches:
 notifications:
   email: false
 before_script:
-  - npm prune
+  - yarn
 script:
-  - npm run test
+  - yarn test
 after_success:
-  - npm run semantic-release
+  - yarn semantic-release
