--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "scripts": {
     "commit": "git-cz",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "jest --config jest.config.ts --watch --coverage ",
-    "test:single": "jest --config jest.config.ts --coverage",
-    "build": "tsc --build tsconfig.json && rollup -c",
-    "dev": "tsc --build tsconfig.json --watch",
-    "make-badges": "istanbul-badges-readme && istanbul-badges-readme --readmeDir=\"./.github\"\n",
+    "test": "jest --config jest.config.ts --coverage ",
+    "watch:test": "npm test -- --watch",
+    "watch:build": "tsc --build tsconfig.json --watch",
+    "prebuild": "rimraf dist",
+    "build:main": "tsc --build tsconfig.json",
+    "build:umd": "webpack --output-filename index.umd.js --mode=development",
+    "build:umdmin": "webpack --output-filename index.umd.min.js --mode=production",
+    "build": "npm-run-all --parallel build:*",
     "semantic-release": "semantic-release"
   },
   "config": {
@@ -53,24 +56,21 @@
   },
   "homepage": "https://github.com/vakhariaheet/verifier#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.23",
     "codecov": "^3.8.2",
     "codecov.io": "^0.1.6",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "ghooks": "^2.0.4",
-    "istanbul-badges-readme": "^1.4.0",
     "jest": "^26.6.3",
-    "rollup": "^2.52.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "semantic-release": "^18.0.0",
     "ts-jest": "^26.4.2",
-    "ts-node": "^10.0.0",
-    "tslib": "^2.3.0",
-    "typescript": "^4.2.4"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.2.4",
+    "webpack": "^5.55.1",
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {}
 }
