--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,12 @@
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "outDir": "./dist",
-    "declaration": true,
-    "strict": true
-  },
-  "include": [
-    "src/index.ts"
-  ],
-  "exclude": [
-    "node-modules",
-    "dist",
-    "jest.config.ts"
-  ]
+	"compilerOptions": {
+		"target": "ES6",
+		"module": "CommonJS",
+		"moduleResolution": "Node",
+		"outDir": "./dist",
+		"declaration": true,
+		"strict": true
+	},
+	"include": ["src/index.ts"],
+	"exclude": ["node-modules", "dist", "jest.config.ts"]
 }
