--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"commit": "git-cz",
 		"report-coverage": "cat ./coverage/lcov.info | codecov",
 		"test": "jest --config jest.config.ts --coverage ",
-		"watch:test": "yarn test -- --watch",
+		"watch:test": "yarn test --watch",
 		"watch:build": "tsc --build tsconfig.json --watch",
 		"prebuild": "rimraf dist",
 		"format": "yarn prettier --write .",
@@ -56,7 +56,8 @@
 	},
 	"homepage": "https://github.com/vakhariaheet/verifierjs#readme",
 	"devDependencies": {
-		"@types/jest": "^26.0.23",
+		"@types/jest": "^27.5.1",
+		"@types/node": "^17.0.35",
 		"codecov": "^3.8.2",
 		"codecov.io": "^0.1.6",
 		"commitizen": "^4.2.4",
